[package]
name = "tactom-experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
csv = "1.3.1"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serialport = "4.7.1"
tabled = { version = "0.18.0", features = ["ansi"]}
tokio = { version = "1.44.2", features = ["rt-multi-thread", "sync", "macros", "time"]}
